# spark_engine

./: '  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  \  ]  flake.nix  main.odin  shell.nix  spark_engine
include/: index_buffer.h  loader.h  logger.h  rawModel.h  raw_model.h  renderer.h  shader.h  sprite.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h
shaders/: triangle_vert.glsl
spark/: error.odin  shader.odin
spark_engine/src/: core.rs  main.rs
src/: application.rs  color.rs  core.rs  glad.c  index_buffer.cpp  lib.rs  loader.cpp  logger.cpp  main.cpp  main.rs  rawModel.cpp  renderer.cpp  renderer.rs  shader.cpp  vertex_array.cpp  vertex_buffer.cpp
src/core/: loader.cpp  logger.cpp  main.cpp
src/core/entities/: sprite.cpp
src/core/graphics/: renderer.cpp  shader.cpp
src/shaders/: triangle.glsl
